# insurance-backend

./: .flake8  .isort.cfg  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  pyproject.toml
backend/: settings.py  urls.py
insurance/: admin.py  fsm.py  models.py  serializers.py  tests.py  urls.py  utils.py  views.py
insurance/migrations/: 0001_initial.py  0002_initial.py  0003_alter_policy_type.py  0004_alter_policy_type.py
users/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py
